styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@media print {
  body {
    background-color: var(--white);
  }

  .skc-root-layout
    > *:not(.skc-content-layout, .skc-split-layout, .skc-page-header) {
    display: none;
  }
}

@layer base {
  * {
    @apply outline-offset-4;
  }

  html {
    @apply accent-primary;
  }

  body {
    @apply bg-background font-body text-on-background;
  }

  .light {
    @apply [color-scheme:light];
  }

  .dark {
    @apply [color-scheme:dark];
  }

  @media (prefers-color-scheme: dark) {
    html {
      @apply [color-scheme:dark];
    }
  }
}

@layer utilities {
  .position-center {
    @apply absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2;
  }

  .tap-highlight-none {
    @apply [-webkit-tap-highlight-color:transparent];
  }

  .fade-out-to-t,
  .fade-out-to-b,
  .fade-out-to-r,
  .fade-out-to-l {
    --fade-width: 2rem;
    mask-image: linear-gradient(
      to var(--fade-direction),
      transparent,
      black var(--fade-width)
    );
  }

  .fade-out-1 {
    --fade-width: 0.25rem;
  }

  .fade-out-2 {
    --fade-width: 0.5rem;
  }

  .fade-out-4 {
    --fade-width: 1rem;
  }

  .fade-out-8 {
    --fade-width: 2rem;
  }

  .fade-out-to-t {
    --fade-direction: bottom;
  }

  .fade-out-to-b {
    --fade-direction: top;
  }

  .fade-out-to-r {
    --fade-direction: left;
  }

  .fade-out-to-l {
    --fade-direction: right;
  }
}

@layer components {
  .kbd {
    @apply -my-1 inline-block select-none rounded-sm border-[0.25px] border-b-2
      border-outline-variant bg-surface-container px-2 py-1 active:-mb-[3.5px]
      active:translate-y-0.5 active:border-b-[0.25px];
  }

  .link {
    @apply font-medium text-primary underline decoration-primary decoration-2
      underline-offset-4 transition-[text-decoration-color]
      hover:decoration-tertiary hover:transition-none
      focus-visible:decoration-tertiary focus-visible:transition-none;
  }
}

.skc-icon {
  @apply !font-icon;
}

/* SK Components workarounds */

.skc-page-header__blobs {
  pointer-events: none;
}

.skc-nav-bar {
  backdrop-filter: blur(16px) !important;
}

.skc-card-header__content > .skc-card-header__subtitle {
  font-family: var(--font-body);
}
.skc-card--filled
  .skc-dialog
  :is(.skc-text-field__label, .skc-chip-field__label, .skc-select__label) {
  background-color: var(--surface-container-high) !important;
}

/* Inset card support
  Temporary until the SK Components library is updated.
  PS: this is not good code. Please don’t learn from this.
*/

:is(.skc-card.skc-card--filled, .skc-dialog)
  :is(.skc-card--outlined, .skc-card--filled) {
  background-color: var(--surface-bright);
}
:is(.skc-card, .skc-dialog)
  .skc-card:has(> .skc-card-content)
  .skc-card-header {
  padding: 0.5rem 0.75rem 0;
}
:is(.skc-card, .skc-dialog)
  .skc-card.skc-card:not(> .skc-card-content)
  .skc-card-header {
  padding: 0.75rem 0.25rem 0.75rem 1rem;
}
:is(.skc-card, .skc-dialog)
  .skc-card:has(> .skc-card-content)
  .skc-card-content {
  padding: 0 0.75rem 0.5rem;
}
:is(.skc-card, .skc-dialog)
  .skc-card.skc-interactive:not(.skc-interactive--no-ripple) {
  border: 0 solid var(--outline-variant);
}
:is(.skc-card, .skc-dialog)
  .skc-card.skc-interactive:not(.skc-interactive--no-ripple):is(
    :hover,
    :focus
  ) {
  border-width: 1px;
  margin: -1px;
}

